--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -25,6 +25,11 @@
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 mt-3">
             <button id="btn-reservation-1" type="button" class="btn btn-info float-right w-100">CONTINUAR</button>
         </div>
+        <div class="row pb-3 pl-3 pr-3">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
+                <label id="lbl-reservation-message" class="white-label">HAS HECHO UNA RESERVA PARA 5 PERSONAS EL 23 DE MARZO A LAS 8:00 PM</label>
+            </div>
+        </div>
     </div>
 
     <div id="reservation-modal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
