--- a/cava/Views/Home/ReservationRetrieve.cshtml
+++ b/cava/Views/Home/ReservationRetrieve.cshtml
@@ -118,7 +118,7 @@
                             <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 mt-3">
-                            <input id="btn-confirm-reservation" type="button" value="FINALIZAR" class="btn btn-info w-100" />
+                            <input id="btn-confirm-reservation" type="button" value="CONFIRMAR" class="btn btn-info w-100" />
                         </div>
                     </div>
                 </div>
