--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="row pb-3 pl-3 pr-3">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3">
-                <label id="lbl-reservation-message" class="white-label">HAS HECHO UNA RESERVA PARA 5 PERSONAS EL 23 DE MARZO A LAS 8:00 PM</label>
+                <label id="lbl-reservation-message" class="white-label"></label>
             </div>
         </div>
     </div>
