--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -5,14 +5,15 @@
 
 
 .bg {
-    /* The image used */
-    background-image: url(images/IMG_9893.jpg);
-    /* Full height */
-    height: 100%;
-    /* Center and scale the image nicely */
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+    background: url(images/IMG_9893.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+html {
+    
 }
 
 .navbar {
