--- a/cava/Views/Home/ReservationRetrieve.cshtml
+++ b/cava/Views/Home/ReservationRetrieve.cshtml
@@ -108,13 +108,13 @@
                     </div>
                     <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 mt-3">
-                            <input id="btn-toggle-reservation" type="button" value="SALIR" class="btn btn-warning w-100" />
+                            <button id="btn-toggle-reservation" class="btn btn-warning w-100">SALIR</button>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 mt-3">
-                            <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
+                            <button id="btn-cancel-reservation" class="btn btn-danger w-100">CANCELAR</button>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 mt-3">
-                            <input id="btn-confirm-reservation" type="button" value="CONFIRMAR" class="btn btn-info w-100" />
+                            <button id="btn-confirm-reservation" class="btn btn-info w-100">VERIFICAR</button>
                         </div>
                     </div>
                 </div>
