--- a/cava/Views/Home/Reservation.cshtml
+++ b/cava/Views/Home/Reservation.cshtml
@@ -63,10 +63,10 @@
                     </div>
                     <div class="row pb-3 pl-3 pr-3">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <input id="btn-cancel-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
+                            <input id="btn-cancel-modal-reservation" type="button" value="CANCELAR" class="btn btn-danger w-100" />
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                            <button id="btn-confirm-reservation" type="button" class="btn btn-info float-right w-100">CONFIRMAR RESERVCIÓN</button>
+                            <button id="btn-confirm-modal-reservation" type="button" class="btn btn-info float-right w-100">CONFIRMAR RESERVCIÓN</button>
                         </div>
                     </div>
                 </div>
