Changed design still need to check changes

--- a/cava/Views/Home/Index.cshtml
+++ b/cava/Views/Home/Index.cshtml
@@ -2,11 +2,6 @@
     ViewBag.Title = "Cava";
 }
 
-<br />
-<br />
-<br />
-<br />
-<br />
-<div id="main-container" class="device-height p-3" style="overflow-y:auto;overflow-x:hidden">
+<div id="main-container" class="device-height">
     @Html.Partial("Experience")
 </div>
