--- a/cava/Content/custom.css
+++ b/cava/Content/custom.css
@@ -5,18 +5,15 @@
 
 
 .bg {
-    background: url(images/IMG_9893.jpg) no-repeat center center fixed;
+    /*background: url(images/background.jpg) no-repeat center center fixed;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-html {
-}
-
 .navbar {
-    opacity: 0.95;
+    opacity: 0.9;
     width: 100%;
 }
 
@@ -75,7 +72,7 @@ html {
     border-color: white !important;
 }
 
-.row.card{
+.row.card {
     padding-bottom: 15px !important;
 }
 
@@ -138,7 +135,147 @@ html {
         width: 320px;
     }
 
-@media only screen and (min-width: 2559px) and (max-width:2561px) {
+
+.slide-title {
+    top: 10%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+    font-family: "futura-pt";
+    font-size: 20px;
+    color: black;
+    font-weight: 900;
+    letter-spacing: .15em;
+}
+
+.container-title {
+    top: 40%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+    font-family: "futura-pt";
+    font-size: 15px;
+    color: white;
+    letter-spacing: .20em;
+}
+
+.slide-sub-title {
+    top: 15%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+    font-family: "futura-pt";
+    font-size: 15px;
+    color: black;
+    letter-spacing: .10em;
+    text-decoration: none;
+}
+
+.processing-icon {
+    top: 50%;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+}
+
+.footer-details {
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    text-align: center;
+}
+
+.transparent5-slide {
+    opacity: 0.5;
+    transition: opacity 0.8s;
+}
+
+.transparent5 {
+    opacity: 0.5;
+    transition: opacity 0.8s;
+}
+
+.transparent8 {
+    opacity: 0.8;
+    transition: opacity 0.8s;
+    background: #2c3e50;
+}
+
+img.transparent5:hover {
+    opacity: 1.0;
+    transition: opacity 0.8s;
+    cursor: pointer;
+}
+
+div.transparent8:hover {
+    opacity: 1.0;
+    transition: opacity 0.8s;
+    cursor: pointer;
+}
+
+.h-200 {
+    height: 200px;
+}
+
+.h-400 {
+    height: 400px;
+}
+
+.h-600 {
+    height: 600px;
+}
+
+.footer-bg {
+    background-color: #2c3e50;
+}
+
+.carousel-fade .carousel-item {
+    opacity: 0;
+    transition-duration: .9s;
+    transition-property: opacity;
+}
+
+    .carousel-fade .carousel-item.active,
+    .carousel-fade .carousel-item-next.carousel-item-left,
+    .carousel-fade .carousel-item-prev.carousel-item-right {
+        opacity: 1;
+    }
+
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-right {
+    opacity: 0;
+}
+
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item.active,
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-prev {
+    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
+}
+
+/*@media only screen and (min-width: 2559px) and (max-width:2561px) {
     .device-height {
         height: 900px
     }
@@ -166,7 +303,7 @@ html {
     .device-height {
         height: 500px
     }
-}
+}*/
 
 /*
 @media only screen and (min-width: 320px) and (max-device-with: 425px) {
